# gram-platform-monorepo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  init-multiple-dbs.sh  nx.json  package-lock.json  package.json  postgres-healthcheck.sh  pyproject.toml
applications/directory/: .env.local  Dockerfile  README.md  project.json  pyproject.toml
applications/match/: Dockerfile  README.md  project.json  pyproject.toml
applications/orchestrator/: .env.develop  .env.local  Dockerfile  Dockerfile.api  README.md  alembic.ini  entrypoint.sh  project.json  pyproject.toml
applications/orchestrator/alembic/: env.py
applications/orchestrator/alembic/versions/: 2025_06_10_1105-20b31a971619_add_process_and_batch.py  2025_06_13_1754-b24c52074095_add_process_and_batch.py
applications/orchestrator/orchestrator/: hello.py  try_celery_call.py
applications/orchestrator/orchestrator/api/: main.py
applications/orchestrator/orchestrator/api/routers/: batches.py  entities.py
applications/orchestrator/orchestrator/core/: database.py  settings.py
applications/orchestrator/orchestrator/domains/: base.py  batch.py  process.py
applications/orchestrator/orchestrator/enums/: process_status.py
applications/orchestrator/orchestrator/models/: __init__.py  base.py  batch.py  process.py
applications/orchestrator/orchestrator/repositories/: process.py
applications/orchestrator/orchestrator/services/: process.py
applications/orchestrator/orchestrator/services/create_process_orchestrator/: create_process_orchestrator.py  exceptions.py  status.py
applications/orchestrator/orchestrator/workers/: main.py
applications/orchestrator/orchestrator/workers/tasks/create_process_saga/: __init__.py  complete_process.py  create_partial_process.py  create_process.py  handle_match_reply.py  handle_search_reply.py  handle_standardization_reply.py  handle_standardize_reply.py  save.py
applications/orchestrator/tests/: test_hello.py
applications/standardization/: Dockerfile  README.md  project.json  pyproject.toml
applications/standardization/standardization/core/: settings.py
applications/standardization/standardization/workers/: main.py
applications/standardization/standardization/workers/tasks/: tasks.py
(+13 files in other folders)
