[project]
name = "standardization"
version = "0.1.0"
description = "Standardization service of GRAM platform"
authors = []
readme = "README.md"
requires-python = ">=3.12,<3.13"

  [tool.poetry]
  package-mode = false


  [tool.poetry.dependencies]
  python = ">=3.12,<3.13"
  pydantic = "^2.11.5"
  celery = {extras = ["redis"], version = "^5.5.0"}
  pydantic_settings = "^2.9.1"


  [tool.poetry.group.dev.dependencies]
  autopep8 = "2.3.1"
  pytest-sugar = "^1.0.0"
  pytest-cov = "^6.0.0"
  pytest-html = "^4.1.1"
  ruff = "^0.9.10"
  mypy = "^1.16.0"
  pytest = "^8.3.5"
  watchdog = "^6.0.0"

[tool.poetry.group.local.dependencies]
contracts = { path = "../packages/contracts", develop = true }

#Test configuration
[tool.coverage.run]
branch = true
source = [ "standardization" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = """
 --cov
 --cov-report html:'../../coverage/applications/standardization/html'
 --html='../../reports/applications/standardization/unittests/html/index.html'
"""